syntax = "proto3";

package settings.profile.password.response;

enum Error {
    INVALID_CREDENTIALS = 0;
    PREVIOUSLY_USED_PASSWORD = 1;
    PASSWORDS_DO_NOT_MATCH = 2;
    TOO_MANY_REQUESTS = 3;
    INVALID_PASSWORD = 4;
    SERVER_ERROR = 5;
}

message Response {
    oneof response_field {
        Error error = 1;
        string token = 2;
    }
}

